miniextendr-macros/tests/ui/derive_dataframe_field_unknown_attr.stderr
error: unknown field attribute; expected `skip`, `rename`, `as_list`, `expand`, or `width`
 --> tests/ui/derive_dataframe_field_unknown_attr.rs:7:17
  |
7 |     #[dataframe(bogus)]
  |                 ^^^^^
